# magic-conch-shell

./: .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  USER.md  pyproject.toml
brain/: USER.md
docs/archive/: SPEC-v0.1.md  spec-sections-draft.md
docs/design/: 00-architecture.md  01-extension-model.md  02-data-model.md
docs/design/fr-notes/: FR-A1.md  FR-A2.md  FR-A3.md  FR-A4.md  FR-A5.md  FR-B1.md  FR-B2.md  FR-B3.md  FR-B4.md  FR-B5.md  FR-C1.md  FR-C2.md  FR-C3.md  FR-C4.md  FR-C5.md  FR-D1.md  FR-D2.md  FR-D3.md  FR-D4.md  FR-D5.md  FR-E1.md  FR-E2.md  FR-E3.md  FR-E4.md  FR-E5.md  FR-F1.md  FR-F2.md  FR-F3.md  FR-F4.md  FR-G1.md  FR-G2.md  FR-G3.md  (+9 more)
docs/features/: 01-feature-catalog.md  02-priority.md  03-traceability.md
docs/implementation/: 00-roadmap.md  01-day1-tasks.md  02-dependencies.md  03-checkpoints.md
docs/requirements/: 00-overview.md  01-background.md  02-user-context.md  04-non-functional.md  05-constraints.md  06-success-criteria.md
scripts/: test_memsearch.py
src/mcs/: __init__.py  cli.py  config.py  server.py
templates/: experiment-log.md  interview-note.md  meeting-note.md
tests/: conftest.py  test_capture_webhook_hook.py  test_cli_entity.py  test_cli_inbox.py  test_cli_retro.py  test_cli_skill.py  test_entity.py  test_hermes_client.py  test_inbox.py  test_llm.py  test_memory.py  test_notion.py  test_okr.py  test_search_helpers.py  test_search_integration.py  test_server_entity_tools.py  test_skill_corpus.py  test_skill_detector.py  test_skill_labeler.py  test_skill_suggestion.py  test_templates.py  test_watcher.py
(+75 files in other folders)
